src/objects/RateClassDescrBean__mdt.object
<CustomObject>
    <fields>
        <fullName>ConfigTagId__c</fullName>
        <label>ConfigTagId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DescriptionCode__c</fullName>
        <label>DescriptionCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DescriptionGroup__c</fullName>
        <label>DescriptionGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DescriptionText__c</fullName>
        <label>DescriptionText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <label>IsDefault</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <label>LanguageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LevelCode__c</fullName>
        <label>LevelCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RateClass__c</fullName>
        <label>RateClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortDescriptionText__c</fullName>
        <label>ShortDescriptionText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RateClassDescrBean</label>
    <pluralLabel>RateClassDescrBean</pluralLabel>
</CustomObject>